fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@ a:link, a:visited {
   text-align: center;
   height: 56px;
   font-style: italic;
-  padding: 10px;
+  padding: 10px 0;
 
 }
 
@@ -132,7 +132,7 @@ a:link, a:visited {
 .section-title {
   width: 100vw;
   font-size: 30px;
-  padding: 19px;
+  padding: 19px 0;
   text-align: center;
 }
 
@@ -214,6 +214,10 @@ a:link, a:visited {
 @media screen and (max-width: 540px) {
   .project-image {
     width: 100vw;
+  }
+
+  .project {
+    box-shadow: 0px 12px 30px;
   }
 }
 
